# QuizGenAI

./: .gitignore  collab.md  package-lock.json
.github/: copilot-instructions.md
backend/: pyproject.toml  tmp_generate.json  tmp_submit.json
backend/app/: __init__.py  config.py  database.py  deps.py  main.py  models.py  oauth2.py  schemas.py
backend/app/api/: deps.py  router.py  routes_auth.py  routes_health.py  routes_leaderboard.py  routes_quiz.py
backend/app/core/: config.py
backend/app/models/: schemas.py
backend/app/routers/: auth_api.py  leaderboard_api.py  quiz_api.py  stats_api.py
backend/app/services/: auth_service.py  leaderboard_service.py  quiz_service.py  streak_service.py
backend/tests/: test_auth_flow.py  test_llm_integration.py  test_milestone1_flow.py
db/: README.md  alembic.ini  config.py  database.py  models.py
db/migrations/: env.py
docs/: backend-endpoints.md  backend-role.md  database-role.md  db-schema.md  frontend-role.md  llm-integration.md  llm-role.md  restore_auth_instructions.md  setup-nvidia-api.md  todo.md
docs/postman/: Hire4thon.postman_collection.json  Hire4thon.postman_environment.json  README.md
frontend/: index.html  package-lock.json  package.json
frontend/.github/: copilot-instructions.md
frontend/src/: App.jsx  index.css
llm_service/: test_llm.py
llm_service/chains/: explain_chain.py  insight_chain.py  quiz_chain.py
llm_service/prompts/: explain_prompt.py  insight_prompt.py  quiz_prompt.py
llm_service/providers/: llm_provider.py
llm_service/rag/: rag_pipeline.py  vector_store.py
(+41 files in other folders)
